src/dts/tests/enums/enums.exp
Error: enums.js:8
  8:         y = Color.R;
                 ^^^^^^^ number. This type is incompatible with
  4: var y: string = "";
            ^^^^^^ string


Found 1 error
